#132: Wrap styles to avoid overflow

--- a/app/src/assets/css/modules/_tools.scss
+++ b/app/src/assets/css/modules/_tools.scss
@@ -1,12 +1,4 @@
-h1 {
-  margin-top: 0px;
-  background-color: black;
-  color: white;
-  width: 100%;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-
+// EditImage.vue
 .modal {
   position: fixed;
   top: 0;
@@ -19,211 +11,223 @@ h1 {
   justify-content: center;
   align-items: center;
   z-index: 1; /* ensures that the modal appears on top of other elements */
-}
 
-.image-cropper-container {
-  width: 700px;
-  margin-top: 48px; /* deal with extra heigh from the navigation pane */
-  max-width: 90%;
-  max-height: calc(90% - 48px);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: white;
-  border: 2px solid black;
-  border-radius: 8px;
-  overflow-y: auto;
-  & img {
+  h1 {
     margin-top: 0px;
+    background-color: black;
+    color: white;
+    width: 100%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
   }
-  &-buttons {
+
+  .image-cropper-container {
+    width: 700px;
+    margin-top: 48px; /* deal with extra heigh from the navigation pane */
+    max-width: 90%;
+    max-height: calc(90% - 48px);
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    margin-bottom: 20px;
-    & p {
-      margin-bottom: 0px;
-      font-weight: 700;
-      margin-left: 8px;
-      margin-right: 8px;
-      background-color: rgba(192, 192, 192, 0.5);
-      padding: 8px 12px;
-      border-radius: 2px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 8px;
+    overflow-y: auto;
+    & img {
+      margin-top: 0px;
+    }
+    &-buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 20px;
+      & p {
+        margin-bottom: 0px;
+        font-weight: 700;
+        margin-left: 8px;
+        margin-right: 8px;
+        background-color: rgba(192, 192, 192, 0.5);
+        padding: 8px 12px;
+        border-radius: 2px;
+      }
     }
   }
-}
 
-.imageWrapper {
-  width: 90%;
-  height: 75%;
-  margin-bottom: 20px;
-}
+  .imageWrapper {
+    width: 90%;
+    height: 75%;
+    margin-bottom: 20px;
+  }
 
-.image {
-  max-width: 100%;
-  max-height: 100%;
-}
+  .image {
+    max-width: 100%;
+    max-height: 100%;
+  }
 
-.relative {
-  position: relative;
-}
+  .relative {
+    position: relative;
+  }
 
-.phaseDot {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-}
+  .phaseDot {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+  }
 
-.scale-bar-inputs {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 90%;
-  & div {
-    width: 98%;
+  .scale-bar-inputs {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    & div {
+      width: 98%;
+    }
+  }
+
+  .calibrationLine {
+    position: absolute;
+    height: 5px;
+    border: 1px solid white;
+    background-color: black;
   }
 }
 
-.calibrationLine {
-  position: absolute;
-  height: 5px;
-  border: 1px solid white;
-  background-color: black;
-}
+// ImageUpload.vue
+.section_imageUpload {
+  /* Browse files button */
+  .fileButtonWrapper {
+    margin-bottom: 0px;
+  }
 
-/* Browse files button */
-.fileButtonWrapper {
-  margin-bottom: 0px;
-}
+  .fileButton {
+    margin-left: 0px;
+    margin-bottom: 20px;
+  }
 
-.fileButton {
-  margin-left: 0px;
-  margin-bottom: 20px;
-}
+  h4 {
+    text-align: left;
+    margin-top: 0px;
+    font-size: 15px;
+  }
 
-h4 {
-  text-align: left;
-  margin-top: 0px;
-  font-size: 15px;
-}
+  /* Subheaders such as 'Image dimensions' and 'Parameters' */
+  .subheader {
+    margin-bottom: 15px;
+    border-bottom: 1px solid gray;
+  }
 
-/* Subheaders such as 'Image dimensions' and 'Parameters' */
-.subheader {
-  margin-bottom: 15px;
-  border-bottom: 1px solid gray;
-}
+  .tooltipWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
 
-.tooltipWrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
+  /* info and error alerts */
+  .alert {
+    text-align: left;
+    border: none;
+  }
 
-/* info and error alerts */
-.alert {
-  text-align: left;
-  border: none;
-}
+  /**********
+  image table
+  **********/
+  .imageTable {
+    margin-bottom: 20px;
+  }
 
-/**********
-image table
-**********/
-.imageTable {
-  margin-bottom: 20px;
-}
+  .imageTableHeader {
+    border-bottom: 1px solid gray;
+    margin-bottom: 15px;
+  }
 
-.imageTableHeader {
-  border-bottom: 1px solid gray;
-  margin-bottom: 15px;
-}
+  .imageTableHeader, .imageTableContents {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
 
-.imageTableHeader, .imageTableContents {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
+  .imageTableContents {
+    margin-bottom: 5px;
+  }
 
-.imageTableContents {
-  margin-bottom: 5px;
-}
+  .imageTableHeader h4, .imageTableContents p, .tooltipWrapper {
+    width: 25%;
+    text-align: left;
+  }
 
-.imageTableHeader h4, .imageTableContents p, .tooltipWrapper {
-  width: 25%;
-  text-align: left;
-}
+  .tooltipWrapper h4 {
+    width: initial;
+  }
 
-.tooltipWrapper h4 {
-  width: initial;
-}
+  .imageTableContents p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 15px;
+  }
 
-.imageTableContents p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding-right: 15px;
-}
+  .imageTableButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 25%;
+  }
 
-.imageTableButtons {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  width: 25%;
-}
+  .imageTableButton {
+    margin-top: 0px;
+    margin-left: 0px;
+  }
 
-.imageTableButton {
-  margin-top: 0px;
-  margin-left: 0px;
-}
+  .imageSizeError {
+    font-weight: 700;
+    color: red;
+  }
 
-.imageSizeError {
-  font-weight: 700;
-  color: red;
-}
+  /*********
+  parameters
+  *********/
+  .selectDropdownsWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 
-/*********
-parameters
-*********/
-.selectDropdownsWrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
+  .singleSelectDropdown {
+    width: 49%;
+  }
 
-.singleSelectDropdown {
-  width: 49%;
-}
+  /* image dimensions */
+  .imageDimensionsWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
 
-/* image dimensions */
-.imageDimensionsWrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-}
+  .imgDimWidth {
+    width: 20%;
+    max-width: 225px;
+    margin-right: 15px;
+  }
 
-.imgDimWidth {
-  width: 20%;
-  max-width: 225px;
-  margin-right: 15px;
-}
+  .imgDimHeight {
+    width: 20%;
+    max-width: 225px;
+    margin-left: 15px;
+    margin-right: 30px;
+  }
 
-.imgDimHeight {
-  width: 20%;
-  max-width: 225px;
-  margin-left: 15px;
-  margin-right: 30px;
-}
+  .imgDimUnits {
+    width: 200px;
+    max-width: 25%;
+  }
 
-.imgDimUnits {
-  width: 200px;
-  max-width: 25%;
-}
-
-.imgDimButton {
-  margin-left: 30px;
+  .imgDimButton {
+    margin-left: 30px;
+  }
 }
